--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -16,9 +16,9 @@
     padding: 20px 35px;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
-     border: 1px solid black; 
     transform: scale(0.5);
     transition: 0.5s;
+    box-shadow: 5px 5px 15px black;
 }
 
 .modal.active{
@@ -28,4 +28,12 @@
 
 .modal_content.active{
     transform: scale(1);
+}
+
+.xmark_icon{
+    height: 30px;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
 }
